# imu2NaturalLanguage

./: .gitignore  README.md  cnn_gnn.py  pyproject.toml  requirements.txt
data/: all_train_gt.pkl  all_y_dat_train.pkl
