[project]
name = "imu2text"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ax-platform>=0.1.20",
    "botorch>=0.4.0",
    "matplotlib==3.8.0",
    "numpy<2",
    "pandas==2.0.3",
    "scikit-learn==1.3.2",
    "scipy==1.10.1",
    "tabulate>=0.9.0",
    "tensorflow==2.16.1",
    "torch==2.4.1",
    "torch-geometric>=2.7.0",
    "torchvision>=0.10.1",
]
